nothing done, but figured out a way

--- a/app/assets/stylesheets/pages/_edit_profile.scss
+++ b/app/assets/stylesheets/pages/_edit_profile.scss
@@ -104,6 +104,10 @@
   margin-bottom: 1vh
 }
 
+#artist-edit-profile {
+  background-color: black;
+}
+
 
 // {
 //   border-left-color: transparent;
