added call to action

--- a/app/views/pages/_featured_artist.html.erb
+++ b/app/views/pages/_featured_artist.html.erb
@@ -5,7 +5,7 @@
   <div class="row no-gutter">
     <div class="col-xs-4 image-rectangle-small" style="background-image: linear-gradient(135deg, rgba(0, 0, 0, 0.2) 0%, rgba(67, 67, 67, 0.2) 50%), url('https://s-media-cache-ak0.pinimg.com/originals/8b/d3/91/8bd3919f20dd898ad5cc9b1d37c5577a.jpg'); background-size: cover;">
         <div class="explore-art">
-          <h4 class="font-white-small">Featured Artist</h4>
+          <h4 class="font-white-small">Featured Artists</h4>
           <%= link_to "Explore", artists_path, class: "btn btn-explore" %>
         </div>
     </div>
