--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,3 +6,13 @@
   <%= render 'aboutgitinked' %>
 
   <%= render 'featured_artist' %>
+
+  <div class="row text-center">
+    <div class="col-xs-12">
+      <h3> Artist seeking great work? </h3>
+
+      <br>
+      <%= link_to "Sign Up", new_artist_registration_path, class: "btn btn-primary btn-large" %>
+    </div>
+  </div>
+</div>
