--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -22,7 +22,6 @@
     padding-right: 0;
     padding-left: 0;
   }
-  padding-bottom: 50px;
 }
 
 
@@ -56,7 +55,10 @@
 }
 
 
-
+.btn-large {
+  width: 70%;
+  margin-bottom: 5vh;
+}
 
 
 
