--- a/app/views/pages/_banner.html.erb
+++ b/app/views/pages/_banner.html.erb
@@ -1,7 +1,6 @@
 <div class="banner-landing-page">
   <h1>Get Inked by top local artists</h1>
-  <h2>Discover new works and book an appointment</h2>
-  <div>
+  <div class= form-home>
 
     <%= form_tag "/artists", method: "get", class: 'form-banner' do |f| %>
     <%= select_tag 'city', options_for_select(cities), class: 'select-pages-home dropdown-style' %>
