css of cards user dashboard

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -7,4 +7,5 @@
 @import "photo-show";
 @import "new-review";
 @import "artist-dashboard";
-@import "artist-index"
+@import "artist-index";
+@import "user-dashboard";
