--- a/app/assets/stylesheets/pages/_edit_profile.scss
+++ b/app/assets/stylesheets/pages/_edit_profile.scss
@@ -105,6 +105,37 @@
 }
 
 
+.group        {
+  position:relative;
+  margin-bottom: 10px;
+}
+input         {
+  font-size:18px;
+  padding:10px 10px 10px 5px;
+  display:block;
+  width:300px;
+  border:none;
+  border-bottom:1px solid #757575;
+}
+input:focus     { outline:none; }
+
+
+label          {
+  color:#999;
+  font-size:18px;
+  font-weight:normal;
+  position:absolute;
+  pointer-events:none;
+  left:5px;
+  top:10px;
+  transition:0.2s ease all;
+}
+
+input:focus ~ label, input:valid ~ label     {
+  top:-20px;
+  font-size:14px;
+  color: $primary;
+}
 // {
 //   border-left-color: transparent;
 //   border-right-color: transparent;
