--- a/app/views/pages/_aboutgitinked.erb
+++ b/app/views/pages/_aboutgitinked.erb
@@ -2,21 +2,16 @@
 
 <div class="info-padding">
 
-<h1>What's get.inked</h1>
+<h1>What is GetInked?</h1>
 
 <h2>Location</h2>
-<p class="paragraph-text-align">Travelling to a new city and want to keep a memory? It's easy
-with get.inked. We connect you with local tattoo artists that you
-can't find anywhere else.</p>
+<p class="paragraph-text-align">In a new city and want a tattoo, but don't know where to start? GetInked makes it easy to browse work, contact top local artists, and book an aoppoinment.</p>
 
 <h2>Artists</h2>
-<p class="paragraph-text-align">Top artists will provide you with the best services at a
-reasonable price. Explore galleries of tattoos and find the best
-tattoo artist for your location or style.</p>
+<p class="paragraph-text-align">Connect with top artists all over the world. Explore our gallery and find an artist that fits your location and style.</p>
 
 <h2>Feedback</h2>
-<p class="paragraph-text-align">Did you like your tattoo artist? Leave them a review on their
-page or follow them so you can stay up to date with their new
-works or locations.</p>
+<p class="paragraph-text-align">Like your artist? Leave them a review and follow them so you can stay up to date with their
+work and location.</p>
 
 </div>
