--- a/app/assets/stylesheets/pages/_artist-index.scss
+++ b/app/assets/stylesheets/pages/_artist-index.scss
@@ -8,6 +8,8 @@
 .row.no-gutter-artist-index {
   margin-left: 0;
   margin-right: 0;
+  margin-bottom: 0;
+  margin-top: -12px;
   padding-left: 0;
   padding-right: 0;
   padding: 12px;
@@ -21,4 +23,6 @@
 
 .search-artist-index {
   margin-top: 20px;
+  width: 309px;
+  margin-left: 52px;
 }
