--- a/app/assets/stylesheets/pages/_edit_profile.scss
+++ b/app/assets/stylesheets/pages/_edit_profile.scss
@@ -107,22 +107,30 @@
 
 .group        {
   position:relative;
-  margin-bottom: 10px;
+  margin-bottom: 30px;
 }
-input         {
-  font-size:18px;
+
+
+.input-material, .textarea-material         {
+  font-size: 14px;
   padding:10px 10px 10px 5px;
   display:block;
-  width:300px;
+  width:100%;
   border:none;
   border-bottom:1px solid #757575;
 }
-input:focus     { outline:none; }
 
 
-label          {
-  color:#999;
-  font-size:18px;
+
+.input-material:focus, .textarea-material:focus { outline: none; }
+
+
+
+
+.label-material {
+
+  color:#757575;
+  font-size: 14px;
   font-weight:normal;
   position:absolute;
   pointer-events:none;
@@ -131,14 +139,65 @@ label          {
   transition:0.2s ease all;
 }
 
-input:focus ~ label, input:valid ~ label     {
+.input-material:focus ~ .label-material, .input-material:valid ~ .label-material     {
   top:-20px;
-  font-size:14px;
+  font-size: 12px;
   color: $primary;
 }
+
+// textarea:focus ~ label, textarea:valid ~ label   {
+//   top:-20px;
+//   font-size:12px;
+//   color: $primary;
+// }
+
+.moveitup {
+  top:-20px;
+  font-size:12px;
+  color: $primary;
+}
+
+
+
+
+.bar  {
+  position:relative;
+  display:block;
+  width: 100%;
+}
+
+.bar:before, .bar:after   {
+  content:'';
+  height:1px;
+  width: 0%;
+  bottom: 1px;
+  position:absolute;
+  background: $primary;
+  transition: 0.3s ease all;
+}
+
+.bar:before {
+  left:50%;
+}
+
+.bar:after {
+  right:50%;
+}
+
+.input-material:focus ~ .bar:before, .input-material:focus ~ .bar:after {
+  width: 50%;
+}
+
+.textarea-material:focus ~ .bar:before, .textarea-material:focus ~ .bar:after {
+  width: 50%;
+}
+
 // {
 //   border-left-color: transparent;
 //   border-right-color: transparent;
 //   border-top-color: transparent;
 // }
+
+
+
 
