absolute mess in edit form

--- a/app/assets/stylesheets/pages/_edit_profile.scss
+++ b/app/assets/stylesheets/pages/_edit_profile.scss
@@ -192,6 +192,10 @@
   width: 50%;
 }
 
+.margin-bottom {
+  margin-bottom: 20px;
+}
+
 // {
 //   border-left-color: transparent;
 //   border-right-color: transparent;
