--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -8,6 +8,9 @@
  * ------------------------------------- */
 // Google fonts
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Bree+Serif");
+@import url('https://fonts.googleapis.com/css?family=Bree+Serif');
+
+
 $base-font: "Open Sans", "Helvetica", "sans-serif";
 $header-font: "Bree Serif", "Helvetica", "sans-serif";
 
