Add see more button and back button photo show

--- a/app/assets/stylesheets/pages/_photo-show.scss
+++ b/app/assets/stylesheets/pages/_photo-show.scss
@@ -40,6 +40,25 @@
   top: -9px;
 }
 
+.see-more {
+  position: absolute;
+  top: 80px;
+  left: 88px;
+}
+
+.see-more a {
+  color: white;
+}
+
+.back-photo-show {
+  margin-top: 20px;
+  margin-bottom: 15px;
+  margin-left: 7px;
+}
+.back-photo-show a {
+  color: black;
+}
+
 
 
 
