--- a/app/views/pages/_featured_artist.html.erb
+++ b/app/views/pages/_featured_artist.html.erb
@@ -6,7 +6,7 @@
     <div class="col-xs-4 image-rectangle-small" style="background-image: linear-gradient(135deg, rgba(0, 0, 0, 0.2) 0%, rgba(67, 67, 67, 0.2) 50%), url('https://s-media-cache-ak0.pinimg.com/originals/8b/d3/91/8bd3919f20dd898ad5cc9b1d37c5577a.jpg'); background-size: cover;">
         <div class="explore-art">
           <h4 class="font-white-small">Featured Artists</h4>
-          <%= link_to "Explore", artists_path, class: "btn btn-explore" %>
+          <%#= link_to "Explore", artists_path, class: "btn btn-explore" %>
         </div>
     </div>
     <div class="col-xs-4 banner image-rectangle-small" style="background-image: linear-gradient(135deg, rgba(0, 0, 0, 0.2) 0%, rgba(67, 67, 67, 0.2) 50%), url('http://oddstuffmagazine.com/wp-content/uploads/2013/07/Beautiful-Tattoos-for-girls-41.jpg'); background-size: cover;">
