--- a/app/assets/stylesheets/pages/_artist-index.scss
+++ b/app/assets/stylesheets/pages/_artist-index.scss
@@ -1,6 +1,6 @@
 .photo-artist-index {
-   height: 130px !important;
-   width: 130px;
+ height: 130px !important;
+ width: 130px;
   /* margin-bottom: 3%; */
   padding: 1px;
 }
@@ -25,4 +25,9 @@
   margin-top: 20px;
   width: 309px;
   margin-left: 52px;
+  .form-banner {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
 }
