--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -1,12 +1,11 @@
 <div class="wrapper text-center">
 <div class="search-artist-index">
     <%= form_tag "/artists", method: "get", class: 'form-banner' do |f| %>
-    <%= select_tag 'city', options_for_select(@l_array), class: 'select-pages-home selectpicker' %>
-    <%= select_tag 'style', options_for_select(@styles), class: 'select-pages-home selectpicker' %>
-    <%= submit_tag "Discover Art", class: 'btn-index btn-landing' %>
+    <%= select_tag 'city', options_for_select(@l_array, selected: params["city"]), class: 'select-pages-home selectpicker' %>
+    <%= select_tag 'style', options_for_select(@styles, selected: params["style"]), class: 'select-pages-home selectpicker' %>
+    <%= submit_tag "Discover Art", class: 'btn-landing' %>
     <% end %>
   </div>
-
 
 
   <br>
