--- a/app/views/pages/_aboutgitinked.erb
+++ b/app/views/pages/_aboutgitinked.erb
@@ -4,13 +4,13 @@
 
 <h1>What is GetInked?</h1>
 
-<h2>Location</h2>
-<p class="paragraph-text-align">In a new city and want a tattoo, but don't know where to start? GetInked makes it easy to browse work, contact top local artists, and book an aoppoinment.</p>
-
-<h2>Artists</h2>
+<h2>Browse</h2>
 <p class="paragraph-text-align">Connect with top artists all over the world. Explore our gallery and find an artist that fits your location and style.</p>
 
-<h2>Feedback</h2>
+<h2>Book</h2>
+<p class="paragraph-text-align">Once you find an artist you like book an appointment with them to get your one of a kind tattoo.</p>
+
+<h2>Follow</h2>
 <p class="paragraph-text-align">Like your artist? Leave them a review and follow them so you can stay up to date with their
 work and location.</p>
 
