some fancy animation

--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -5,6 +5,6 @@
 <% end %>
 <% content_for(:after_js) do  %>
 <%= javascript_tag do %>
-$('.chat-background').animate({scrollTop:$(document).height()}, 'slow');
+$('.chat-background').animate({scrollTop: 9999}, 'slow');
 <% end %>
 <% end %>
