--- a/app/views/pages/_aboutgitinked.erb
+++ b/app/views/pages/_aboutgitinked.erb
@@ -1,17 +1,20 @@
-
-
 <div class="info-padding">
 
-<h1>What is GetInked?</h1>
+  <h1>What is GetInked?</h1>
 
-<h2>Location</h2>
-<p class="paragraph-text-align">In a new city and want a tattoo, but don't know where to start? GetInked makes it easy to browse work, contact top local artists, and book an aoppoinment.</p>
+  <div class="paragraph-reveal">
+    <h2>Location</h2>
+    <p class="paragraph-text-align">In a new city and want a tattoo, but don't know where to start? GetInked makes it easy to browse work, contact top local artists, and book an aoppoinment.</p>
+  </div>
 
-<h2>Artists</h2>
-<p class="paragraph-text-align">Connect with top artists all over the world. Explore our gallery and find an artist that fits your location and style.</p>
+  <div class="paragraph-reveal">
+    <h2>Artists</h2>
+    <p class="paragraph-text-align paragraph-reveal">Connect with top artists all over the world. Explore our gallery and find an artist that fits your location and style.</p>
+  </div>
 
-<h2>Feedback</h2>
-<p class="paragraph-text-align">Like your artist? Leave them a review and follow them so you can stay up to date with their
-work and location.</p>
-
+  <div class="paragraph-reveal">
+    <h2>Feedback</h2>
+    <p class="paragraph-text-align paragraph-reveal">Like your artist? Leave them a review and follow them so you can stay up to date with their
+      work and location.</p>
+  </div>
 </div>
