--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -1,3 +1,8 @@
+<div class="back-artist-show">
+  <%= link_to artists_path do %>
+    <i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back to search
+  <% end %>
+</div>
 <div class="container-show">
  <%= image_tag @artist.avatar, class: "profile-image img-circle img-artist-show" %>
  <div class="artist-show-info">
