--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -18,8 +18,8 @@
             <% end %>
           </li>
           <li>
-            <%= link_to root_path do %>
-            <i class="fa fa-home"></i>  <%= t(".profile", default: "Home") %>
+            <%= link_to artists_path do %>
+            <i class="fa fa-search"></i>  <%= t(".profile", default: "Search") %>
             <% end %>
           </li>
           <li>
