--- a/app/assets/stylesheets/pages/_artist-show.scss
+++ b/app/assets/stylesheets/pages/_artist-show.scss
@@ -14,8 +14,13 @@
   margin-left: 25px;
 }
 
-.reviews {
+#reviews {
   padding-top: 20px;
+  margin-bottom: 40px;
+}
+
+#reviews a:visited {
+  color: white;
 }
 
 .row-photo {
@@ -32,6 +37,7 @@
 
 .artist-show-info a:visited {
   text-decoration: none !important;
+  color: white;
 }
 
 .links-aritst-show a:visited {
@@ -62,4 +68,5 @@
   color: black;
   margin-top: 15px;
   margin-left: 15px;
+  text-decoration: none;
 }
