--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,8 +1,10 @@
-<h4 class="text-center h1-review">Leave a review for <%= @artist.name %></h4>
-<div class="col-xs-offset-3 col-xs-4">
-<%= simple_form_for [@artist, @review] do |f| %>
-<%= f.input :description, :label=> "Review", required: true, input_html: {style: 'width: 200px; height: 10vh;', rows: 5}, as: :text, class: "review-form"  %>
-<%= render partial: "shared/stars" %>
-<%= f.button :submit, class: "btn btn-primary" %>
-<% end %>
-</div>
+
+  <h4 class="text-center h1-review">Leave a review for <%= @artist.name %></h4>
+  <div class="col-xs-offset-3 col-xs-4">
+    <%= simple_form_for [@artist, @review] do |f| %>
+    <%= f.input :description, :label=> "Review", required: true, input_html: {style: 'width: 200px; height: 10vh;', rows: 5}, as: :text, class: "review-form"  %>
+    <%= render partial: "shared/stars" %>
+    <%= f.button :submit, class: "btn btn-primary btn-review" %>
+    <% end %>
+  </div>
+
