--- a/app/views/pages/_aboutgitinked.erb
+++ b/app/views/pages/_aboutgitinked.erb
@@ -11,9 +11,9 @@
     <h2>Book</h2>
     <p class="paragraph-text-align">Once you find an artist you like book an appointment with them to get your one of a kind tattoo.</p>
   </div>
-  
+
   <div class="paragraph-reveal">
-    <h2>Follow</h2>
-    <p class="paragraph-text-align">Like your artist? Leave them a review and follow them so you can stay up to date with their work and location.</p>
+    <h2>Join</h2>
+    <p class="paragraph-text-align">Whether you work for a studio or you're a freelancer, join and share your work.</p>
   </div>
 </div>
