see more button color white, artist address link color when visited

--- a/app/assets/stylesheets/pages/_artist-show.scss
+++ b/app/assets/stylesheets/pages/_artist-show.scss
@@ -70,3 +70,12 @@
   margin-left: 15px;
   text-decoration: none;
 }
+
+.artist-location a:hover {
+  color: #337ab7;
+  text-decoration: none;
+}
+
+.artist-location a:visited{
+  color: #337ab7;
+}
