--- a/app/assets/stylesheets/pages/_photo-show.scss
+++ b/app/assets/stylesheets/pages/_photo-show.scss
@@ -50,6 +50,10 @@
   color: white;
 }
 
+.see-more a:visited {
+  color:white;
+}
+
 .back-photo-show {
   margin-top: 20px;
   margin-bottom: 15px;
