--- a/app/views/layouts/_dashboard_user.html.erb
+++ b/app/views/layouts/_dashboard_user.html.erb
@@ -3,7 +3,7 @@
 
 <h4 class="text-center">Your upcoming appointments:</h4>
 
-<% @appointments.each do |appointment| %>
+<% @appointments.reverse.each do |appointment| %>
 
 <div class="card">
 
