--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>GetInked</title>
+  <meta property="og:image" content="http://2.bp.blogspot.com/-aIzUiEpVHe0/Uz7cRwv67DI/AAAAAAAAAoA/a3QNIwPq_fA/w1200-h630-p-k-no-nu/Download-Tattoo-Girl-Designs-HD-Wallpaper.jpg"/>
+  <%= favicon_link_tag %>
   <%= action_cable_meta_tag %>
   <%= csrf_meta_tags %>
   <%= stylesheet_link_tag 'application', media: 'all' %>
