buttons, margins, etc

--- a/app/assets/stylesheets/pages/_artist-show.scss
+++ b/app/assets/stylesheets/pages/_artist-show.scss
@@ -64,6 +64,10 @@
   margin-bottom: 10px;
 }
 
+.back-artist-show {
+  margin-top: 20px;
+}
+
 .back-artist-show a {
   color: black;
   margin-top: 15px;
@@ -78,4 +82,12 @@
 
 .artist-location a:visited{
   color: #337ab7;
+}
+
+.fa-map-marker {
+  margin-right: 7px;
+}
+
+.btn-review-margin {
+  margin-bottom: 10px;
 }
