--- a/app/assets/stylesheets/pages/_new-appointment.scss
+++ b/app/assets/stylesheets/pages/_new-appointment.scss
@@ -6,3 +6,9 @@
 #ui-id-1 {
   background-color: black !important;
 }
+
+// .form-appointment {
+//   display: flex;
+//   flex-direction: row;
+//   justify-content: center;
+// }
