--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,5 @@
+<div class="page-margin-bottom">
+
 <% render 'shared/navbar' %>
 
 
@@ -6,5 +8,6 @@
   <%= render 'aboutgitinked' %>
 
   <%= render 'featured_artist' %>
+
 
 </div>
