--- a/app/assets/stylesheets/pages/_new-review.scss
+++ b/app/assets/stylesheets/pages/_new-review.scss
@@ -13,7 +13,16 @@
   border-radius: 4px;
 }
 
+
+.container-review {
+  position: relative;
+}
+
+
 .btn-review {
   color: white;
   background: #7e57c2;
+  position: absolute;
+  //left: 55px;
+  //bottom: 5px;
 }
