--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -1,10 +1,15 @@
+<div class="back-photo-show">
+  <%= link_to request.referer.present? ? request.referer : default_path do %>
+    <i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back
+  <% end %>
+</div>
 <div class="booking-header">
   <h5 class="text-center">
     Book an appointment with </h5>
-  <h5 class="text-center"><%= @artist.name %></h5>
+  <h5 class="text-center"><%= @artist.name%></h5>
 </div>
 <!-- put form in wrapper to center datetimepicker -->
-  <div class="form-wrapper">
+  <div class="form-wrapper form-appointment">
     <%= simple_form_for [@artist, @appointment], url: artist_appointments_path, method: :post do |f| %>
     <%= f.input :start_time, input_html: { id: 'datetimepicker'}%>
     <%= f.input :end_time, input_html: { id: 'datetimepicker2'} %>
