--- a/app/views/layouts/_artist_pictures_select.html.erb
+++ b/app/views/layouts/_artist_pictures_select.html.erb
@@ -2,8 +2,8 @@
   <div class="wrapper">
     <div class="row">
       <div class="col-xs-12">
-        <h3>
-          Tap to upload your work, <%= current_artist.name %>
+        <h3 class="text-center">
+          Tap to upload your work
         </h3>
       </div>
       <div class="col-xs-12">
