--- a/app/views/layouts/_dashboard_artist.html.erb
+++ b/app/views/layouts/_dashboard_artist.html.erb
@@ -9,17 +9,26 @@
     <div class="col-xs-6" style="padding-right: 50px; padding-top: 20px;">
       <div class="views">
         <p>
-          Total Views
+          Profile Views
         </p>
         <i class="fa fa-eye" aria-hidden="true"></i>
         <p>
-          451
+          0
         </p>
       </div>
     </div>
   </div>
   <div class="row">
-    <div class="col-xs-12" style="padding-left: 70px;">
+    <div class="col-xs-12" >
+    <% if current_artist.appointments.count == 0 %>
+
+      <div class="container text-center">
+        <h4>You have no appointments at the moment</h4>
+      </div>
+
+      <% else %>
+
+
       <h4>
         Your appointments:
       </h4>
@@ -49,21 +58,30 @@
         <%= appointment.message %>
       </p>
       <% end %>
+      <% end %>
     </div>
   </div>
   <div class="row">
-    <div class="col-xs-12" style="padding-left: 70px;">
-      <h4>
-        Your current availability:
-      </h4>
-      <% current_artist.availabilities.each do |availability| %>
-      <ul>
-        <%= availability.day %>
-        <%= availability.start_time %> -
-        <%= availability.end_time %>
-      </ul>
-      <% end %>
-      <%= link_to 'Edit Availability', new_availability_path, class: "btn btn-artist-show" %>
-    </div>
-  </div>
-</div>
+    <div class="col-xs-12 text-center">
+
+      <% if current_artist.availabilities.count == 0 %>
+      <div class="container">
+        <h3 class="text-center">
+          <h4 class="text-center"> Your availability is not set, yet</h4>
+          <div class="container">
+            <% else %>
+            <h4>
+              Your current availability:
+            </h4>
+            <% current_artist.availabilities.each do |availability| %>
+            <ul>
+              <%= availability.day %>
+              <%= availability.start_time %>
+              <%= availability.end_time %>
+            </ul>
+            <% end %>
+            <%end %>
+            <%= link_to 'Edit Availability', new_availability_path, class: "btn btn-artist-show" %>
+          </div>
+        </div>
+      </div>
