minor details changed

--- a/app/views/layouts/_dashboard_artist.html.erb
+++ b/app/views/layouts/_dashboard_artist.html.erb
@@ -1,5 +1,5 @@
 
-<div class="container">
+<div class="container page-margin-bottom">
   <div class="row">
     <div class="col-xs-6" style="padding-left: 55px; padding-top: 30px;">
       <h3>
@@ -68,7 +68,7 @@
       <div class="container">
         <h3 class="text-center">
           <h4 class="text-center"> Your availability is not set, yet</h4>
-          <div class="container">
+          <div class="container-loco">
             <% else %>
             <h4>
               Your current availability:
