--- a/app/views/pages/_aboutgitinked.erb
+++ b/app/views/pages/_aboutgitinked.erb
@@ -1,6 +1,6 @@
 <div class="info-padding">
 
-  <h1>What is GetInked?</h1>
+  <h1>What is get.inked?</h1>
 
   <div class="paragraph-reveal">
     <h2>Browse</h2>
