--- a/app/assets/stylesheets/pages/_new-review.scss
+++ b/app/assets/stylesheets/pages/_new-review.scss
@@ -1,10 +1,11 @@
 .review-form {
   border: 1px solid black;
   border-radius: 4px;
+  width: 70%;
 }
 
 .h1-review {
-  margin-bottom: 35px
+  margin-bottom: 35px;
 }
 
 .btn.btn-primary {
@@ -19,10 +20,16 @@
 }
 
 
-.btn-review {
+.btn-review-new {
   color: white;
   background: #7e57c2;
   position: absolute;
-  //left: 55px;
-  //bottom: 5px;
+  left: 55px;
+  bottom: 5px;
+}
+
+.smally {
+  height: 80px;
+  width: 80px;
+  margin-bottom: 20px;
 }
