--- a/app/assets/stylesheets/components/_banner-landing-page.scss
+++ b/app/assets/stylesheets/components/_banner-landing-page.scss
@@ -28,12 +28,13 @@
     justify-content: space-between;
     height: 170px;
     button {
-      padding: 14px;
+      padding: 7px;
       box-shadow: none;
       border: none;
     }
     .btn-landing {
-      padding: 23px;
+      height: auto;
+      padding: 7px;
       display: flex;
       justify-content: center;
       align-items: center;
