login/sign up photo

--- a/app/assets/stylesheets/pages/_edit_profile.scss
+++ b/app/assets/stylesheets/pages/_edit_profile.scss
@@ -1,7 +1,7 @@
 
 
 .artist-edit-background {
-  background-image: url('badass_oldie.png');
+  background-image: url('http://i.imgur.com/MKRV2Ce.png');
   background-size: cover;
   background-position: center;
   height: 30vh;
